@@ -421,6 +421,8 @@ Castro::restart (Amr&     papa,
 
        for (MFIter mfi(S_new); mfi.isValid(); ++mfi)
        {
+           RealBox gridloc = RealBox(grids[mfi.index()],geom.CellSize(),geom.ProbLo());
+           const Real* prob_lo = geom.ProbLo();
            const Box& bx      = mfi.validbox();
            const int* lo      = bx.loVect();
            const int* hi      = bx.hiVect();
@@ -428,15 +430,30 @@ Castro::restart (Amr&     papa,
            if (! orig_domain.contains(bx)) {
 
 #ifdef AMREX_DIMENSION_AGNOSTIC
+
+#ifdef GPU_COMPATIBLE_INITIALIZATION
+
+#pragma gpu
+              ca_initdata(AMREX_INT_ANYD(lo), AMREX_INT_ANYD(hi),
+                          BL_TO_FORTRAN_ANYD(S_new[mfi]),
+                          AMREX_REAL_ANYD(dx), AMREX_REAL_ANYD(prob_lo));
+
+#else
+
               BL_FORT_PROC_CALL(CA_INITDATA,ca_initdata)
                 (level, cur_time, ARLIM_3D(lo), ARLIM_3D(hi), ns,
 		 BL_TO_FORTRAN_ANYD(S_new[mfi]), ZFILL(dx),
-		 ZFILL(geom.ProbLo()), ZFILL(geom.ProbHi()));
+		 ZFILL(gridloc.lo()), ZFILL(gridloc.hi()));
+
+#endif
+
 #else
+
 	      BL_FORT_PROC_CALL(CA_INITDATA,ca_initdata)
 		(level, cur_time, lo, hi, ns,
 		 BL_TO_FORTRAN(S_new[mfi]), dx,
-		 geom.ProbLo(), geom.ProbHi());
+		 gridloc.lo(), gridloc.hi());
+
 #endif
 
            }
